solved prob of overlapping Black  part on zooming

--- a/drawer/edit_style.css
+++ b/drawer/edit_style.css
@@ -1,7 +1,7 @@
 
     *[contenteditable] {
       margin: 1em auto;
-	  min-height:900px;
+	  min-height:2000px;
 	   bottom:1px;
       padding: 10px;
       background: #fff;
